pi alignment issue fixes

--- a/src/app/pages/process-intelligence/processinsights/processinsights.component.css
+++ b/src/app/pages/process-intelligence/processinsights/processinsights.component.css
@@ -523,7 +523,7 @@ img.hover-img {
   display: initial;
 }
 #pie_chart1,#pie_chart2{
-  width: 105%;
+  width: 100%;
   height: 270px;
 }
 .PI-insigntscost {
